added chart and equation. 5 gene model.

--- a/boids.html
+++ b/boids.html
@@ -3,10 +3,15 @@
         <title>Boids test</title>
     </head>
     <body>
-        <canvas id="canvas" width="1200" height="800">
+        <canvas id="canvas" width="1000" height="600">
             This text is displayed if your browser does not support HTML5 Canvas.
         </canvas>
+        <canvas id="chart" width="1000" height="200">
+            No canvas support :(
+        </canvas>
         <div id="info"></div>
+        <img src=boideqn.png></img>
+        <script type='text/javascript' src='chart.js'></script>
         <script type='text/javascript' src='boids.js'></script>
     </body>
 </html>
