Charts working superbly, fitness chart added

--- a/boids.html
+++ b/boids.html
@@ -6,7 +6,16 @@
         <canvas id="canvas" width="1000" height="600">
             This text is displayed if your browser does not support HTML5 Canvas.
         </canvas>
-        <canvas id="chart" width="1000" height="200">
+        <canvas id="genomeChart" width="500" height="200">
+            No canvas support :(
+        </canvas>
+        <canvas id="fitnessChart" width="500" height="200">
+            No canvas support :(
+        </canvas>
+        <canvas id="allGenomesChart" width="500" height="200">
+            No canvas support :(
+        </canvas>
+        <canvas id="allFitnessesChart" width="500" height="200">
             No canvas support :(
         </canvas>
         <div id="info"></div>
